Configure Vercel function timeout to 60 seconds

--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,10 @@
             "src": "/(.*)",
             "dest": "app_rapid_api.py"
         }
-    ]
+    ],
+    "functions": {
+        "app_rapid_api.py": {
+            "maxDuration": 60
+        }
+    }
 } 
